# ocp-build

./: .gitignore  CLA.md  Makefile  Makefile.config.in  README.md  Readme.txt  configure  configure.ac  ocp-build-bundle.ocp.in  typerex.ocp.in
boot/: ocaml.ocp  ocp-build.boot  primitives  win32_c.c
config/: configure  configure.ac
docs/user-manual/: Makefile  content.tex  user-manual.css  user-manual.tex
libs/ocplib-system/: file.ml  file.mli
ocaml/: ocaml.ocp
ocp-build/: Makefile  ocp-build.boot
src/: buildActions.ml  buildActions.mli  buildAutogen.ml  buildEngine.ml  buildEngineDisplay.ml  buildEngineTypes.ml  buildGlobals.ml  buildMisc.ml  buildOCP.mli  buildOCPInterp.ml  buildOCPInterp.mli  buildOCPParse.ml  buildOCPTree.ml  buildOCamlConfig.ml  buildOCamlMeta.ml  buildOCamlRules.ml  buildOCamlTest.ml  buildOCamldep.ml  buildOasis.ml  buildOptions.mli  buildScanner.mli  buildTypes.ml  metaConfig.ml  metaParser.ml  metaTypes.ml  oasisParser.ml  ocp-build.ocp
src/ocp-build/: buildActionBuild.ml  buildActionInstall.ml  buildActionQuery.ml  buildActionRoot.ml  buildActionTests.ml  buildActionUninstall.ml  buildActions.ml  buildActions.mli  buildArgs.ml  buildAutogen.ml  buildAutogen.mli  buildConfig.ml  buildEngine.ml  buildEngineContext.ml  buildEngineDisplay.ml  buildEngineDisplay.mli  buildEngineGlobals.ml  buildEngineMtime.ml  buildEngineRules.ml  buildEngineTypes.ml  buildGlobals.ml  buildMain.ml  buildMisc.ml  buildOCP.ml  buildOCP.mli  buildOCPInterp.ml  buildOCPInterp.mli  buildOCPParse.ml  buildOCPParser.mly  buildOCPTree.ml  buildOCPTypes.ml  buildOCPVariable.ml  buildOCPVariable.mli  buildOCamlConfig.ml  buildOCamlConfig.mli  buildOCamlEnv.ml  buildOCamlInstall.ml  buildOCamlMeta.ml  buildOCamlMisc.ml  buildOCamlRules.ml  (+23 more)
src/ocplib/: configParser.ml  configParser.mli  file.ml  linearToposort.ml  ocp-build-ocplib.ocp  simpleConfig.ml  simpleConfig.mli  stdlib2.ml  stringSubst.ml  stringSubst.mli
src/win32/: ocp-build-win32.ocp  win32_waitpids_c.c
tests/cycle/: a.ml  b.ml  (+1 more)
(+109 files in other folders)
